--- a/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
+++ b/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
@@ -9,8 +9,54 @@
     <div class="row">
         <div class="col-md-12">
             <!--List Address-->
-            <div class="text-center">
-                <a class="btn btn-outline-info fa fa-plus" asp-action="RegisterDeliveryAddress" asp-controller="Home" asp-area="Client" asp-route-returnUrl="@Url.Action("AddressDelivery", "ShoppingCart", new { area = ""})"></a>
+            <!--TODO - lISTAR ENDEREÇOS VINCULADOS AO USUÁRIO-->
+            <!--TODO - APRESENTAR O ENDEREÇO DO USUÁRIO (SESSION)-->
+            <table class="table">
+                <div class="text-center">
+                    <h6>Novo endereço </h6><a class="btn btn-outline-info fa fa-plus ml-2" style="width:60px;" asp-action="RegisterDeliveryAddress" asp-controller="Home" asp-area="Client" asp-route-returnUrl="@Url.Action("AddressDelivery", "ShoppingCart", new { area = ""})"></a>
+                </div>
+                <br />
+                <tbody>
+                    <tr>
+                        <th scope="row">
+                            <input type="radio" name="address" value="0"/>
+                        </th>
+                        <td>
+                            <strong>Endereço </strong>
+                            <p>
+                                @ViewBag.Client.Zipcode | @ViewBag.Client.State, @ViewBag.Client.City, @ViewBag.Client.Neighborhood, @ViewBag.Client.Address, @ViewBag.Client.Number, @ViewBag.Client.Complement
+                            </p>
+                        </td>
+                        <td>
+                            <strong>Valor do Frete </strong>
+                            <p>R$ 120,00</p>
+                        </td>
+                    </tr>
+
+                    @foreach (DeliveryAddress address in ViewBag.Address)
+                    {
+                        <tr>
+                            <th scope="row">
+                                <input type="radio" name="address" value="0" />
+                            </th>
+                            <td>
+                                <strong>@address.Name </strong>
+                                <p>
+                                    @address.Zipcode | @address.State, @address.City, @address.Neighborhood, @address.Address, @address.Number, @address.Complement
+                                </p>
+                            </td>
+                            <td>
+                                <strong>Valor do Frete </strong>
+                                <p>R$ 130,00</p>
+                            </td>
+                        </tr>
+                    }
+
+
+                </tbody>
+            </table>
+            <div class="float-right">
+                <small>Continuar</small><a asp-action="Index" asp-controller="Payments" class=" ml-2 btn btn-outline-info fa fa-arrow-right" style="width:100px;"></a>
             </div>
         </div>
         <br />
