--- a/mvCommerce/Views/Home/Contact.cshtml
+++ b/mvCommerce/Views/Home/Contact.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contato";
     mvCommerce.Models.Contact contact = (mvCommerce.Models.Contact)ViewData["CONTACT"];
     
 }
