--- a/mvCommerce/Views/Payments/Index.cshtml
+++ b/mvCommerce/Views/Payments/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<mvCommerce.Models.ProductAggregator.ProductItem>
 @{
-    ViewData["Title"] = "Payments";
+    ViewData["Title"] = "Pagamentos";
     decimal subTotal = 0;
 }
 
