--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<mvCommerce.Models.ProductAggregator.ProductItem>
 @inject mvCommerce.Libraries.Login.ClientLogin _loginClient
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Carrinho de Compra";
     decimal subTotal = 0;
 }
 
