--- a/mvCommerce/Views/Product/Visualize.cshtml
+++ b/mvCommerce/Views/Product/Visualize.cshtml
@@ -1,20 +1,22 @@
 ﻿@model mvCommerce.Models.ProductAggregator.Product
-
-<br  style="clear:both" />
-<br  style="clear:both" />
-<br  style="clear:both" />
+@{
+    ViewData["Title"] = "Visualizar Produto";
+}
+<br style="clear:both" />
+<br style="clear:both" />
+<br style="clear:both" />
 
 <div class="container">
     <a href="/">< Voltar</a>
     <br style="clear:both" />
     <br style="clear:both" />
-    <section id="product_detail" >
+    <section id="product_detail">
         <div id="code_prod_detail">
             <div class="card">
                 <div class="row no-gutters">
                     <aside class="col-sm-7 border-right">
                         <article class="gallery-wrap">
-                            <div class="img-big-wrap" >
+                            <div class="img-big-wrap">
                                 <div>
                                     @if (Model.Images != null && Model.Images.Count > 0)
                                     {
@@ -25,7 +27,7 @@
                                         <a href="~/img/default-img.png" data-fancybox><img src="~/img/default-img.png"></a>
                                     }
                                 </div>
-                            </div> 
+                            </div>
                             <div class="img-small-wrap">
                                 @if (Model.Images != null && Model.Images.Count > 0)
                                 {
@@ -34,8 +36,8 @@
                                         <div class="item-gallery"> <img src="@image.Path"></div>
                                     }
                                 }
-                            </div> 
-                        </article> 
+                            </div>
+                        </article>
                     </aside>
                     <aside class="col-sm-5">
                         <article class="p-5">
@@ -73,8 +75,8 @@
                             <a asp-controller="ShoppingCart" asp-action="AddItem" asp-route-id="@Model.Id" class="btn btn-outline-info" style="box-shadow: 3px 3px 3px #a9a9a9"> <i class="fas fa-shopping-cart"></i> Adicionar no Carrinho</a>
                         </article>
                     </aside>
-                </div> 
+                </div>
             </div>
-        </div> 
+        </div>
     </section>
 </div>
