Add JS in imports

--- a/mvCommerce/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
         <script src="/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
         <script src="~/resources/lib/bootstrap-ecommerce-uikit/ui-ecommerce/plugins/fancybox/fancybox.min.js"></script>
         <script src="~/js/ActionsClient.js"></script>
+        <script src="~/js/Actions.js"></script>
     </environment>
     @RenderSection("Scripts", required: false)
 </body>
