--- a/mvCommerce/Views/ShoppingCart/Index.cshtml
+++ b/mvCommerce/Views/ShoppingCart/Index.cshtml
@@ -85,7 +85,7 @@
                                         </div> <!-- price-wrap .// -->
                                     </td>
                                     <td class="text-right">
-                                        <a asp-controller="ShoppingCart" asp-action="RemoveItem" asp-route-id="@item.Id" class="btn btn-outline-danger">Remover</a>
+                                        <a asp-controller="ShoppingCart" asp-action="RemoveItem" asp-route-id="@item.Id" class="btn btn-outline-danger alert-danger my-2 my-sm-0">Remover</a>
                                     </td>
                                 </tr>
 
