--- a/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
+++ b/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
@@ -22,7 +22,7 @@
                         <tr>
                             <th scope="row">
                                 <input type="radio" name="address" value="0" />
-                                <input type="hidden" name="cep" value="@ViewBag.Client.Zipcode"/>
+                                <input type="hidden" name="cep" value="@ViewBag.Client.Zipcode" />
                             </th>
                             <td>
                                 <strong>Seu endereço</strong>
@@ -57,51 +57,66 @@
 
 
                 <div class="card-group">
+
                     <div class="card">
-                        <div class="card-header">
-                            <p class="card-text"><small class="text-muted float-right"></small></p>
-                            <input class="mt-4" type="radio" name="freight" value="PAC" />
-                        </div>
-                        <img src="/img/PAC.png" class="card-img-top" alt="PAC" style="width:340px; margin-top:10px;">
                         <div class="card-body">
                             <h5 class="card-title">PAC</h5>
                             <p class="card-text"></p>
-                            
+
+                        </div>
+                        <img src="/img/PAC.png" class="card-img-top" alt="PAC" style="width:340px; margin-top:10px;">
+                        <div class="card-footer">
+                            <h6 class="text float-right ml-5"></h6>
                         </div>
                     </div>
+
                     <div class="card">
-                        <div class="card-header">
-                            <p class="card-text"><small class="text-muted float-right"></small></p>
-                            <input class="mt-4" type="radio" name="freight" value="SEDEX" />
-                        </div>
-                        <img src="/img/sedex.png" class="card-img-top" alt="SEDEX" style="margin-top:20px">
                         <div class="card-body">
                             <h5 class="card-title">SEDEX</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"><small class="text-muted"></small></p>
+                            <p class="card-text mr-5"></p>
+
+                        </div>
+                        <img src="/img/sedex.png" class="card-img-top" alt="SEDEX" style="margin-bottom:18px">
+                        <div class="card-footer">
+                            <h6 class="text float-right"></h6>
                         </div>
                     </div>
+
+
                     <div class="card">
-                        <div class="card-header">
-                            <p class="card-text"><small class="text-muted float-right"></small></p>
-                            <input class="mt-4" type="radio" name="freight" value="SEDEX10" />
-                        </div>
-                        <img src="/img/sedex-10.jpg" class="card-img-top" alt="SEDEX10" style="width:350px; margin-left:15px;">
                         <div class="card-body">
                             <h5 class="card-title">SEDEX10</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"><small class="text-muted"></small></p>
+                            <p class="card-text ml-5"></p>
+
+                        </div>
+                        <img src="/img/sedex-10.jpg" class="card-img-top" alt="SEDEX10" style="width:300px; margin-left:50px; margin-bottom:50px">
+                        <div class="card-footer">
+                            <h6 class="text float-right ml-5"></h6>
                         </div>
                     </div>
+
+                    @*<div class="card">
+                    <div class="card-header">
+                        <p class="card-text"><small class="text-muted float-right"></small></p>
+                        <input class="mt-4" type="radio" name="freight" value="SEDEX10" />
+                    </div>
+                    <img src="/img/sedex-10.jpg" class="card-img-top" alt="SEDEX10" style="width:350px; margin-left:15px;">
+                    <div class="card-body">
+                        <h5 class="card-title">SEDEX10</h5>
+                        <p class="card-text"></p>
+                        <p class="card-text"><small class="text-muted"></small></p>
+                    </div>
                 </div>
+            </div>*@
 
 
+
+                </div>
                 <div class="float-right">
-                    <h6 style="font-size:large" class="text-center mt-5">Continuar</h6><a asp-action="Index" asp-controller="Payments" class=" ml-2 btn btn-outline-info fa fa-arrow-right mb-5" style="width:100px;"></a>
+                    <h6 style="font-size:large" class="mt-5">Continuar</h6><a asp-action="Index" asp-controller="Payments" class="btn btn-outline-info fa fa-arrow-right mb-5" style="width:100px;"></a>
                 </div>
+                <br />
+                <br />
             </div>
-            <br />
-            <br />
-        </div>
     </div>
 </aside>
