saving shipping cookie and showing on address screen

--- a/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
+++ b/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
@@ -7,7 +7,7 @@
         <br />
         <br />
         <div class="alert alert-info">
-            <h6 class="text-center">Escolha um endereço para prosseguir com o pagamento, ou cadastre um novo!</h6>
+            <h6 class="text-center">Selecione um endereço e uma opção de frete para prosseguir com o pagamento!</h6>
         </div>
         <br />
         <br />
@@ -60,60 +60,43 @@
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">PAC</h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-title"></h5>
+                            <p class="card-text">-</p>
 
                         </div>
                         <img src="/img/PAC.png" class="card-img-top" alt="PAC" style="width:340px; margin-top:10px;">
                         <div class="card-footer">
-                            <h6 class="text float-right ml-5"></h6>
+                            <h6 class="text float-right ml-5">-</h6>
                         </div>
                     </div>
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">SEDEX</h5>
-                            <p class="card-text mr-5"></p>
+                            <h5 class="card-title"></h5>
+                            <p class="card-text mr-5">-</p>
 
                         </div>
                         <img src="/img/sedex.png" class="card-img-top" alt="SEDEX" style="margin-bottom:18px">
                         <div class="card-footer">
-                            <h6 class="text float-right"></h6>
+                            <h6 class="text float-right">-</h6>
                         </div>
                     </div>
 
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">SEDEX10</h5>
-                            <p class="card-text ml-5"></p>
+                            <h5 class="card-title"></h5>
+                            <p class="card-text">-</p>
 
                         </div>
                         <img src="/img/sedex-10.jpg" class="card-img-top" alt="SEDEX10" style="width:300px; margin-left:50px; margin-bottom:50px">
                         <div class="card-footer">
-                            <h6 class="text float-right ml-5"></h6>
+                            <h6 class="text float-right ml-5">-</h6>
                         </div>
                     </div>
-
-                    @*<div class="card">
-                    <div class="card-header">
-                        <p class="card-text"><small class="text-muted float-right"></small></p>
-                        <input class="mt-4" type="radio" name="freight" value="SEDEX10" />
-                    </div>
-                    <img src="/img/sedex-10.jpg" class="card-img-top" alt="SEDEX10" style="width:350px; margin-left:15px;">
-                    <div class="card-body">
-                        <h5 class="card-title">SEDEX10</h5>
-                        <p class="card-text"></p>
-                        <p class="card-text"><small class="text-muted"></small></p>
-                    </div>
-                </div>
-            </div>*@
-
-
-
                 </div>
                 <div class="float-right">
-                    <h6 style="font-size:large" class="mt-5">Continuar</h6><a asp-action="Index" asp-controller="Payments" class="btn btn-outline-info fa fa-arrow-right mb-5" style="width:100px;"></a>
+                    <h6 style="font-size:x-large" class="mt-5">Continuar</h6><a asp-action="Index" asp-controller="Payments" class="btn btn-info fa fa-arrow-right mb-5 btn-continue disabled" style="width:150px; height:50px"></a>
                 </div>
                 <br />
                 <br />
