--- a/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
+++ b/mvCommerce/Views/ShoppingCart/AddressDelivery.cshtml
@@ -95,6 +95,32 @@
                         </div>
                     </div>
                 </div>
+                <br />
+                <br />
+
+                <div class="card-group" style="justify-content:center;">
+                    <div class="box">
+                        <div class="card-body">
+                            <h4 class="card-title">Produtos</h4>
+                            <p class="card-text">R$ 2.000,00</p>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="card-body">
+                            <h4 class="card-title">Frete</h4>
+                            <p class="card-text">R$ 63,80</p>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <div class="card-body">
+                            <h4 class="card-title">Total</h4>
+                            <p>R$ 2.063,80</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="float-right">
                     <h6 style="font-size:x-large" class="mt-5">Continuar</h6><a asp-action="Index" asp-controller="Payments" class="btn btn-info fa fa-arrow-right mb-5 btn-continue disabled" style="width:150px; height:50px"></a>
                 </div>
