--- a/mvCommerce/Areas/Client/Views/Home/RegisterDeliveryAddress.cshtml
+++ b/mvCommerce/Areas/Client/Views/Home/RegisterDeliveryAddress.cshtml
@@ -56,7 +56,7 @@
                                 <!--Endereço-->
                                 <div class="form-group">
                                     <label asp-for="Address">Endereço</label>
-                                    <input asp-for="Address" class="form-control col-8" placeholder="">
+                                    <input asp-for="Address" class="form-control col-8" placeholder="Ex: Rua, Avenida ...">
                                     <span asp-validation-for="Address"></span>
                                 </div>
 
@@ -77,7 +77,7 @@
                                 <!--Complemento-->
                                 <div class="form-group">
                                     <label asp-for="Complement">Complemento</label>
-                                    <input asp-for="Complement" class="form-control col-8" placeholder="">
+                                    <input asp-for="Complement" class="form-control col-8" placeholder="Ex: Próximo a sorveteria">
                                     <span asp-validation-for="Complement"></span>
                                 </div>
 
